# Google-Hackathon_Backend

./: .env  .gcloudignore  .gitignore  Dockerfile  Procfile  README.md  app.py  pyproject.toml  requirements.txt  test_api.py  test_enhanced_agents.py  test_enhanced_report.json  test_polygon_api.py
agent/: __init__.py  ai_insights_agent.py  main_agent.py  market_data_agent.py  personalization_agent.py  reporting_agent.py  risk_assessment_agent.py  sentiment_analysis_agent.py
data/: __init__.py  sample_input.json
reports/: report_20250615_163723.json  report_20250615_163913.json  report_20250615_170805.json  report_20250615_170840.json  report_20250615_171340.json  report_20250615_173923.json  report_20250615_181253.json  report_20250617_213419.json  report_20250619_214034.json  report_20250619_215732.json  report_20250619_215811.json  report_20250619_220632.json  report_20250619_224110.json  report_20250619_224116.json  report_20250619_224140.json  report_20250619_225012.json  report_20250619_231430.json  report_20250619_231622.json  report_20250619_234856.json  report_20250620_154939.json  report_20250620_154951.json  report_20250620_155752.json  report_20250620_155813.json  report_20250620_160731.json  report_20250620_160743.json  report_20250620_161502.json  report_20250620_162735.json  report_20250620_163213.json  report_20250620_164041.json  report_20250620_232557.json  report_20250620_233323.json  report_20250620_233330.json  report_20250620_233336.json  report_20250620_233414.json  report_20250620_233421.json  report_20250620_233431.json  report_20250620_233449.json  report_20250620_234046.json  report_20250620_234649.json  report_20250620_234703.json
static/: mandatory.txt
templates/: index.html
tests/: test_agents.py
